syntax = "proto3";

package pcbook;

option go_package = "pcbook-golang/pb";
option java_package = "com.github.nichol20.pcbook.pb";
option java_multiple_files = true;

import "laptop_message.proto";
// import "google/api/annotations.proto";

message CreateLaptopRequest { 
    Laptop laptop = 1; 
}

message CreateLaptopResponse { 
    string id = 1; 
}

service LaptopService {
    rpc CreateLaptop(CreateLaptopRequest) returns (CreateLaptopResponse) {};
}